--- a/data/etl/etl_dev.ipynb
+++ b/data/etl/etl_dev.ipynb
@@ -8,8 +8,8 @@
     "### phase 0\n",
     "| Task                                  | Status      | Comments  |\n",
     "|---------------------------------------|-------------|-----------|\n",
-    "| Manually clone Azure repo             | Complete    | None      |\n",
-    "| Crawl through repo & get all md files | Done        | None      |\n",
+    "| Manually clone Azure repo             | Complete    | use shallow clone <br>* still receiving 600k+ objects (3.57GiB) <br>* full clone was 7.9 million      |\n",
+    "| Crawl through repo & get all md files | In Progress | None      |\n",
     "| Prepare md for indexing               | In progress | None      |"
    ]
   },
@@ -23,8 +23,12 @@
     "import os\n",
     "\n",
     "PROJECT_ROOT = \"/Users/alex/Desktop/code_projects/commuter-copilot/\"\n",
-    "RAW_DATA_SOURCE_PATH = os.path.join(PROJECT_ROOT, \"local_files\", \"data\", \"raw\")\n",
-    "STAGED_DATA_SOURCE_PATH = os.path.join(PROJECT_ROOT, \"local_files\", \"data\", \"staging\")\n",
+    "RAW_DATA_SOURCE_PATH = os.path.join(\n",
+    "    PROJECT_ROOT, \"local_files\", \"data\", \"raw\", \"azure-docs\"\n",
+    ")\n",
+    "STAGED_DATA_SOURCE_PATH = os.path.join(\n",
+    "    PROJECT_ROOT, \"local_files\", \"data\", \"staging\", \"azure-docs-staging\"\n",
+    ")\n",
     "\n",
     "# Ensure the directories exist\n",
     "os.makedirs(RAW_DATA_SOURCE_PATH, exist_ok=True)\n",
@@ -37,15 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "manually update & clone azure repo to local_files/\n",
-    "in terminal:\n",
-    "    >\n",
-    "    > cd /Users/alex/Desktop/code_projects/commuter-copilot/local_files/data/raw\n",
-    "    > git clone git@github.com:commuter-copilot/azure-docs.git\n",
-    "\"\"\"\n",
-    "\n",
-    "raw_docs_dir = \"../../local_files/data/raw/\""
+    "# manually update & clone azure repo to local_files/ in terminal:\n",
+    "!bash -c \"$PROJECT_ROOT/data/etl/run_etl_azure_docs_raw.sh\""
    ]
   }
  ],
