--- a/data/etl/etl_dev.ipynb
+++ b/data/etl/etl_dev.ipynb
@@ -5,24 +5,19 @@
    "metadata": {},
    "source": [
     "# ETL Development\n",
-    "### phase 0\n",
-    "| Task                                  | Status      | Comments  |\n",
-    "|---------------------------------------|-------------|-----------|\n",
-    "| Manually clone Azure repo             | Complete    | use single branch clone <br>* still receiving 600k+ objects (31.57GiB) <br>* full clone was 7.9 million      |\n",
-    "| Crawl through repo & get all md files | In Progress | None      |\n",
-    "| Prepare md for indexing               | In progress | None      |"
+    "### phase 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set global vars\n",
     "import os\n",
     "\n",
-    "PROJECT_ROOT = \"/Users/alex/Desktop/code_projects/commuter-copilot/\"\n",
+    "PROJECT_ROOT = \"/Users/alexbeacon/Desktop/code_projects/commuter-copilot/\"\n",
     "RAW_DATA_SOURCE_PATH = os.path.join(\n",
     "    PROJECT_ROOT, \"local_files\", \"data\", \"raw\", \"azure-docs\"\n",
     ")\n",
@@ -30,7 +25,7 @@
     "    PROJECT_ROOT, \"local_files\", \"data\", \"staging\", \"azure-docs-staging\"\n",
     ")\n",
     "\n",
-    "# Ensure the directories exist\n",
+    "# # Ensure the directories exist\n",
     "os.makedirs(RAW_DATA_SOURCE_PATH, exist_ok=True)\n",
     "os.makedirs(STAGED_DATA_SOURCE_PATH, exist_ok=True)"
    ]
@@ -41,18 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# manually update & clone azure repo to local_files/ in terminal:\n",
-    "# currently broken\n",
-    "# !bash -c \"$PROJECT_ROOT/data/etl/run_etl_azure_docs_raw.sh\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find all md files in the raw data source path\n",
     "def find_md_files(path):\n",
     "    md_files = []\n",
     "    for root, dirs, files in os.walk(path):\n",
@@ -152,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_ingestion_venv",
+   "display_name": "etl-env",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
