--- a/data/etl/etl_dev.ipynb
+++ b/data/etl/etl_dev.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### extract\n",
+    "## extract\n",
     "* manually cloned azure-docs repo\n",
     "* saved to RAW_DATA_SOURCE_PATH  \n",
     "  \n",
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### transform\n",
+    "## transform\n",
     "* find all md files in source dir\n",
     "* process each doc \n",
     "  * metadata\n",
@@ -73,12 +73,17 @@
     "     \"filename\": str,  // Name of the markdown file  \n",
     "     \"path\": str,  // Full file path of the markdown file  \n",
     "     \"title\": str,  // Title of the document, extracted from frontmatter   or content\n",
-    "     \"content\": str,  // Full text content of the markdown file   excluding frontmatter\n",
     "     \"metadata\": {  // Additional metadata extracted from the frontmatter  \n",
     "          \"description\": str,  // Brief description of the document  \n",
     "          \"ms.date\": str,  // Date associated with the document  \n",
     "          \"ms.topic\": str  // Topic category of the document  \n",
-    "     }  \n",
+    "     },\n",
+    "    \"sections\": [\n",
+    "        {\n",
+    "            \"section_content\": str,  // Doc section (split by `# `)\n",
+    "            \"chunks\": list  // Section split into chunks of ~200 words\n",
+    "        },\n",
+    "    ]\n",
     "}  \n",
     "```\n",
     "\n",
@@ -89,12 +94,17 @@
     "    \"filename\": \"set-up-sso.md\",\n",
     "    \"path\": \"full/path/to/doc.md\",\n",
     "    \"title\": \"Set up single sign-on for Microsoft Defender for IoT sensor console\",\n",
-    "    \"content\": \"# Set up single sign-on for the sensor console\\n\\nIn this article, you learn how to set up single sign-on (SSO) for the Defender for IoT sensor console using Microsoft Entra ID. With SSO, your organization\\'s users can simply sign into the sensor console, and don\\'t need multiple login credentials across different sensors and sites. \\n\\nUsi\",\n",
     "    \"metadata\": {\n",
     "        \"description\": \"Learn how to set up single si...\",\n",
     "        \"ms.date\": \"04/10/2024\",\n",
     "        \"ms.topic\": \"how-to\",\n",
-    "        }\n",
+    "        },\n",
+    "    \"sections\": [\n",
+    "        {\n",
+    "            \"section_content\": \"# Set up single sign-on for the sensor console\\n\\nIn this article, you learn how to set up single sign-on (SSO) for the Defender for IoT sensor console using Microsoft Entra ID. With SSO, your organization\\'s users can simply sign into the sensor console, and don\\'t need multiple login credentials across different sensors and sites. \\n\\nUsi\",\n",
+    "            \"chunks\": [\"chunk 1\", \"chunk 2\", \"chunk n\"]\n",
+    "        },\n",
+    "    ]\n",
     "}\n",
     "```"
    ]
@@ -202,15 +212,27 @@
    "outputs": [],
    "source": [
     "processed_docs = process_all_md_files(all_md_files, chunk_size=200)\n",
-    "print(f\"Processed {len(processed_docs)} documents.\")\n",
-    "print(processed_docs[0][\"sections\"][0][\"chunks\"][:3])"
+    "processed_doc = processed_docs[0]\n",
+    "print(f\"Processed {len(processed_docs)} documents.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"schema: {processed_doc.keys()}\\n\")\n",
+    "print(f\"metadata: {processed_doc[\"metadata\"].keys()}\\n\")\n",
+    "print(f\"sections: {processed_doc[\"sections\"][0].keys()}\\n\")\n",
+    "print(f\"first chunk: {(processed_doc[\"sections\"][0][\"chunks\"][:1])}\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### load\n",
+    "## load\n",
     "* index azure docs to elasticsearch index\n",
     "* save as volume  \n",
     "  \n",
