--- a/data/etl/etl_dev.ipynb
+++ b/data/etl/etl_dev.ipynb
@@ -25,7 +25,9 @@
     "import uuid\n",
     "from frontmatter import Frontmatter\n",
     "import re\n",
-    "from typing import List"
+    "from typing import List\n",
+    "from elasticsearch import Elasticsearch\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -265,6 +267,82 @@
     "  }\n",
     "}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch(\"http://localhost:9200\")\n",
+    "\n",
+    "print(es_client.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_name = \"azure-docs\"\n",
+    "settings = {\n",
+    "    \"number_of_shards\": 1,\n",
+    "    \"number_of_replicas\": 0,\n",
+    "}\n",
+    "mappings = {\n",
+    "    \"properties\": {\n",
+    "        \"id\": {\"type\": \"keyword\"},\n",
+    "        \"filename\": {\"type\": \"keyword\"},\n",
+    "        \"path\": {\"type\": \"keyword\"},\n",
+    "        \"title\": {\"type\": \"text\"},\n",
+    "        \"sections\": {\n",
+    "            \"type\": \"nested\",\n",
+    "            \"properties\": {\n",
+    "                \"section_content\": {\"type\": \"text\"},\n",
+    "                \"chunks\": {\"type\": \"text\"},\n",
+    "            },\n",
+    "        },\n",
+    "        \"metadata\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"enabled\": True,\n",
+    "        },\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "if not es_client.indices.exists(index=index_name):\n",
+    "    es_client.indices.create(\n",
+    "        index=index_name,\n",
+    "        body={\n",
+    "            \"settings\": settings,\n",
+    "            \"mappings\": mappings,\n",
+    "        },\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for doc in tqdm(processed_docs):\n",
+    "    es_client.index(index=index_name, id=doc[\"id\"], body=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = es_client.search(\n",
+    "    index=index_name, body={\"query\": {\"match_all\": {}}, \"size\": 4}\n",
+    ")\n",
+    "\n",
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    print(hit[\"_source\"][\"filename\"])"
    ]
   },
   {
